<resources>
    <string name="app_name">integral</string>
    <string name="double_press_exiting_app">再按一次退出程序</string>
    <string name="health_monitor">首页</string>
    <string name="home_doctor">法币</string>
    <string name="notice_new">币币</string>
    <string name="huodong">活动</string>
    <string name="person_center">我的</string>

    <string name="encode_qrcode">生成二维码</string>
    <string name="dencode_qrcode">扫描二维码</string>
    <string name="code_text">请输入生成二维码的文本信息</string>
    <string name="qrcodetext">这里显示扫描结果</string>

    <string name="about_us_content">Integral是一款不错的软件！</string>

    <string name="china_land">中国大陆</string>
    <string name="btc">BTC</string>
    <string name="conderr">请重新登录</string>
    <string-array name="countries">
        <item>中国大陆</item>
    </string-array>
    <string-array name="icons">
        <item>BTC</item>
    </string-array>
</resources>
