<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:visibility="gone"
            android:id="@+id/sign_up_activity_title"
            android:layout_width="match_parent"
            android:layout_height="44.0dp"
            layout="@layout/common_title_layout" />

        <FrameLayout
            android:id="@+id/fl_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/ll_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/realtabcontent"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#e6e6e6" />

                <RadioGroup
                    android:id="@+id/tab_rg_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:background="#FFFFFF"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="5.0dp"
                    android:paddingTop="5.0dp">

                    <RadioButton
                        android:id="@+id/tab_rb_1"
                        style="@style/tab_rb_style"
                        android:checked="true"
                        android:drawableTop="@drawable/tab_notice_news"
                        android:text="@string/health_monitor"
                        android:textColor="@color/color_radiobutton"
                        android:textSize="10.0sp" />

                    <RadioButton
                        android:id="@+id/tab_rb_2"
                        style="@style/tab_rb_style"
                        android:drawableTop="@drawable/tab_home_doctor"
                        android:text="@string/home_doctor"
                        android:textColor="@color/color_radiobutton"
                        android:textSize="10.0sp" />

                    <RadioButton
                        android:id="@+id/tab_rb_3"
                        style="@style/tab_rb_style"
                        android:drawableTop="@drawable/tab_notice_news"
                        android:text="@string/notice_new"
                        android:textColor="@color/color_radiobutton"
                        android:textSize="10.0sp" />

                    <RadioButton
                        android:id="@+id/tab_rb_4"
                        style="@style/tab_rb_style"
                        android:drawableTop="@drawable/tab_activity_page"
                        android:text="@string/huodong"
                        android:textColor="@color/color_radiobutton"
                        android:textSize="10.0sp" />

                    <RadioButton
                        android:id="@+id/tab_rb_5"
                        style="@style/tab_rb_style"
                        android:drawableTop="@drawable/tab_person_center"
                        android:text="@string/person_center"
                        android:textColor="@color/color_radiobutton"
                        android:textSize="10.0sp" />
                </RadioGroup>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</RelativeLayout>